fixed theme color

--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/index.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/index.html
@@ -12,16 +12,16 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
   <meta name="mobile-web-app-capable" content="yes">
-  
+
   <!-- PWA and Fullscreen Configuration -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Orchester App">
-  
+
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="icon" type="image/png" href="assets/tvjahnlogo.png" />
   <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
-  <meta name="theme-color" content="#D32F2F">
+  <meta name="theme-color" content="#3880FF">
   </head>
 
 <body>
