Added image for dashboard

--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/index.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Tv Jahn Orchester App</title>
+  <title>Orchester App</title>
 
   <base href="/" />
 
