Added Endpoints for notifications in portal

--- a/OrchesterApp.Api/OrchesterApp.Application/Features/Notification/NotificationCategoryEmailSender/ChangeTerminDataEmailTemplate.html
+++ b/OrchesterApp.Api/OrchesterApp.Application/Features/Notification/NotificationCategoryEmailSender/ChangeTerminDataEmailTemplate.html
@@ -85,14 +85,14 @@
 <div class="content">
     <p>Hallo!</p>
 
-    <p>Die Daten für einen Termin wurden geändert. Hier sind die Details:</p>
+    <p>Die Daten für einen Termin wurden von {{Author}} geändert. Hier sind die Details:</p>
 
     <div class="change-box">
         <p><strong>⚠️ Folgende Änderungen wurden vorgenommen:</strong></p>
 
         {{CHANGES_CONTENT}}
     </div>
-        
+
     <p>Mit freundlichen Grüßen,<br>
         Das Orchester App Team</p>
 </div>
