--- a/OrchesterApp.Api/OrchesterApp.Application/Features/Notification/NotificationCategoryEmailSender/ChangeTerminDataEmailTemplate.html
+++ b/OrchesterApp.Api/OrchesterApp.Application/Features/Notification/NotificationCategoryEmailSender/ChangeTerminDataEmailTemplate.html
@@ -80,12 +80,13 @@
 <body>
 <div class="header">
     <h1>📅 Termindaten geändert</h1>
+    <p style="margin: 10px 0 0 0; font-size: 16px;">{{TERMIN_NAME}} am {{TERMIN_START_ZEIT}}</p>
 </div>
 
 <div class="content">
     <p>Hallo!</p>
 
-    <p>Die Daten für einen Termin wurden von {{Author}} geändert. Hier sind die Details:</p>
+    <p>Die Daten für den Termin <strong>{{TERMIN_NAME}}</strong> am <strong>{{TERMIN_START_ZEIT}}</strong> wurden von {{Author}} geändert. Hier sind die Details:</p>
 
     <div class="change-box">
         <p><strong>⚠️ Folgende Änderungen wurden vorgenommen:</strong></p>
