--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/index.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/index.html
@@ -15,7 +15,7 @@
 
   <!-- PWA and Fullscreen Configuration -->
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app-title" content="Orchester App">
 
   <link rel="manifest" href="manifest.webmanifest">
